Bug fix for pre-loader animation, not aligning.

--- a/assets/css/yir.css
+++ b/assets/css/yir.css
@@ -90,7 +90,7 @@ em{
 	position: absolute;
 	top: 40%;
 	height: 100px;
-	width: 440px;
+	width: 410px;
 	opacity: 0;
 	margin-top: -3px;
 }
@@ -110,16 +110,25 @@ em{
     width: 100%;
 }
 
-.siteLoader .head_text .txt_holder .subtxt {
+.siteLoader .head_text .txt_holder.subtxt {
     font-size: 1.75vw;
     letter-spacing: 10px;
-    margin-top: 65px;
+    margin-top: 25px;
     word-spacing: -1px;
-    padding-left: 8px;
+    padding: 0 0 0 8px;
 }
 
 .siteLoader .head_text.light .txt_holder {
     width: 0;
+    text-align: left;
+}
+
+.siteLoader .head_text.light .txt_holder.year_txt {
+    margin-left: 45px;
+}
+
+.siteLoader .head_text.light .txt_holder.subtxt {
+    margin-left: 17px;
 }
 
 .ipad_play {
